# shallow-io

./: Cargo.toml  README.md  index.html
src/: lib.rs  packets.rs  types.rs  ws.rs
