[package]
authors = ["MetaMuffin <metamuffin@yandex.com>"]
edition = "2018"
name = "shallow-client"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
js-sys = "0.3.47"
wasm-bindgen = "0.2.70"

[dependencies.web-sys]
features = [
  "CanvasRenderingContext2d",
  "Document",
  "Element",
  "HtmlCanvasElement",
  "Window",
  "CssStyleDeclaration",
  "EventTarget",
  "HtmlElement",
  "MouseEvent",
  "Node",
  "BinaryType",
  "Blob",
  "ErrorEvent",
  "FileReader",
  "MessageEvent",
  "ProgressEvent",
  "WebSocket",
]
version = "0.3.4"
